--- a/Main.html
+++ b/Main.html
@@ -22,17 +22,17 @@
         <p class="sous-titre">Vos informations :</p>
         <label>
             Nom :
-            <input type ="text" name="nom" id="nom">
+            <input type ="text" name="nom" id="nom" required>
         </label>
         
         <label>
             Prénom :
-            <input type ="text" name="prenom" id="prenom">
+            <input type ="text" name="prenom" id="prenom" required>
         </label>
 
         <label>
             Date de naissance :
-            <input type="date" id="naissance" name="naissance">
+            <input type="date" id="naissance" name="naissance" required>
         </label>
 
         <label>
@@ -228,7 +228,7 @@
                     <p>D'après-vous combien y a t-il eu de participant l'année dernière ?</p>  
                 <label>
                     Votre réponse : 
-                    <input type ="text" name="Q15" id="Q15">
+                    <input type ="number" name="Q15" id="Q15" required>
                 </label>
             </fieldset>
         </div>
