--- a/Main.html
+++ b/Main.html
@@ -234,7 +234,7 @@
         </div>
 
         <!--<button type="submit" name="sauvegarder" id="sauvegarder">Sauvegarder</button>-->
-        <button type="submit" name="envoyer" id="envoyer">Valider les réponses</button>
+        <button type="submit" name="envoyer" id="envoyer" required>Valider les réponses</button>
 
     </form>
 
