--- a/Main.html
+++ b/Main.html
@@ -37,7 +37,7 @@
 
         <label>
             Entreprise :
-            <select id="entreprise" name="entreprise">
+            <select id="entreprise" name="entreprise" required>
                 <option value="Base">-- Selectionner --</option>
                 <option value="A">Entreprise A</option>
                 <option value="B">Entrep B</option>
@@ -47,7 +47,7 @@
         </label>
         
         <label class="petit">
-            <input class="collecte_donnees" type ="checkbox" name="collecte_donnees" id="collecte_donnees">
+            <input class="collecte_donnees" type ="checkbox" name="collecte_donnees" id="collecte_donnees" required>
             Je consens à l'utilisation des données collectées par l'ASRE49 pour le bon déroulement du jeu-concours. 
             <p class="ppetit">Le prestataire s'engage à ne pas réutiliser les données fournies à des fins commerciales.</p>
             <p class="ppetit">Jeu limité à un seul bulletin par salarié.</p>  
