--- a/Main.html
+++ b/Main.html
@@ -89,7 +89,7 @@
                 </label>
                 <label class="form-control">
                     <input type="checkbox" id="E" name="Q2C" value="C">
-                    Les deux sont possibles
+                    Les pistes cyclables et sur la route
                 </label>
                 <label class="form-control">
                     <input type="checkbox" id="E" name="Q2D" value="D">
@@ -117,19 +117,19 @@
                 <p class="question">Combien doit-il y avoir de sticker angle mort sur un poids lourd ?</p>
                 <label class="form-control">
                     <input type="checkbox" id="I" name="Q4A" value="A">
-                    2
+                    1
                 </label>
                 <label class="form-control">
                     <input type="checkbox" id="J" name="Q4B" value="B">
-                    4
+                    2
                 </label>
                 <label class="form-control">
                     <input type="checkbox" id="K" name="Q4C" value="C">
-                    6
+                    3
                 </label>
                 <label class="form-control">
                     <input type="checkbox" id="K" name="Q4D" value="D">
-                    8
+                    4
                 </label>
             </fieldset>
 
