--- a/Main.html
+++ b/Main.html
@@ -36,15 +36,34 @@
         </label>
 
         <label>
-            Entreprise :
-            <select id="entreprise" name="entreprise" required>
-                <option value="Base">-- Selectionner --</option>
-                <option value="A">Entreprise A</option>
-                <option value="B">Entrep B</option>
-                <option value="C">Entrep C</option>
-                <option value="D">Entrep D</option>
-            </select>
-        </label>
+        Entreprise :
+        <select id="entreprise" name="entreprise" required>
+            <option value="Base">-- Selectionner --</option>
+            <option value="ADOMICILE49">ADOMICILE49</option>
+            <option value="ASIA">ASIA</option>
+            <option value="BEJO">BEJO</option>
+            <option value="CCI">CCI</option>
+            <option value="STCS">STCS</option>
+            <option value="UNIL OPAL">UNIL OPAL</option>
+            <option value="DALKIA FROID SOLUTIONS (CESBRON)">DALKIA FROID SOLUTIONS (CESBRON)</option>
+            <option value="COFIROUTE ">COFIROUTE </option>
+            <option value="GEVES">GEVES</option>
+            <option value="JUSTEAU">JUSTEAU</option>
+            <option value="MSA 49">MSA 49</option>
+            <option value="PRIM'HOSLTEIN France">PRIM'HOSLTEIN France</option>
+            <option value="JOLIVAL">JOLIVAL</option>
+            <option value="HUTCHINSON PAULSTRA">HUTCHINSON PAULSTRA</option>
+            <option value="TKE">TKE</option>
+            <option value="COINTREAU">COINTREAU</option>
+            <option value="BRIOCHE PASQUIER">BRIOCHE PASQUIER</option>
+            <option value="RESTORIA">RESTORIA</option>
+            <option value="TERRENA">TERRENA</option>
+            <option value="SDIS 49">SDIS 49</option>
+            <option value="RD ANGERS">RD ANGERS</option>
+            <option value="BRANGEON TRANSPORTS">BRANGEON TRANSPORTS</option>
+            <option value="THALES SIX GTS France">THALES SIX GTS France</option>
+        </select>
+    </label>
         
         <label class="petit">
             <input class="collecte_donnees" type ="checkbox" name="collecte_donnees" id="collecte_donnees" required>
