--- a/Main.html
+++ b/Main.html
@@ -171,7 +171,7 @@
             </label>
             <label class="form-control">
                 <input type="checkbox" id="E" name="Q5C" value="C">
-                Les pistes cyclables et sur la route
+                Sur les pistes cyclables et sur la route
             </label>
             <label class="form-control">
                 <input type="checkbox" id="E" name="Q5D" value="D">
@@ -259,14 +259,14 @@
 
         <fieldset>
             <p class="question">Vous vous retrouvez dans la nécessité absolue de vous arrêter/stationner sur un accotement
-                ou une bande d'arrêt d'urgence. Comment procédez-vous ? </p>
+                ou une bande d'arrêt d'urgence d'autoroute. Comment procédez-vous ? </p>
             <label class="form-control">
                 <input type="checkbox" id="L" name="Q10A" value="A">
                 Rien, il est interdit de stationner ou de s’arrêter même en cas de nécessité absolue
             </label>                
             <label class="form-control">
                 <input type="checkbox" id="M" name="Q10B" value="B">
-                Vous assurez la pré-signalisation du véhicule et vous vous mettez en sécurité derrière les 
+                Vous n'assurez pas la pré-signalisation du véhicule et vous vous mettez en sécurité derrière les 
                 barrières de sécurité                    
             </label>
             <label class="form-control">
@@ -343,7 +343,7 @@
 
 
         <fieldset>  
-                <p>D'après-vous combien y a t-il de participant cette année ?  Aide l'année dernière 1500</p>  
+                <p>D'après-vous combien y a t-il de participant cette année ?  Aide : l'année dernière, il y a eu 1578 participants</p>  
             <label>
                 Votre réponse : 
                 <input type ="number" name="Q15" id="Q15" required>
