--- a/Fini.html
+++ b/Fini.html
@@ -17,7 +17,9 @@
         <h1>Concours sécurité routière ASRE49</h1>
         <img src="Images\route_ASRE49_logo.png" alt="dessin d'une route" class="deco">
     </header>
-    <p class="message">Message de prévention Message de prévention Message de prévention Message de prévention Message de prévention</p>
+    <p class="message">Partagez les bonnes pratiques à vos proches. 
+	    <br>Tous concernés ! 
+	    <br>Tous responsables !</p>
     <h2>Merci d'avoir participé !</h2>
     <p><a href="https://www.asre49.com/">Accéder au site de l'ASRE49</a></p>
 </body>
