--- a/Main.html
+++ b/Main.html
@@ -76,7 +76,7 @@
         <p class="sous-titre">Questionnaire :</p>
 
         <div id="questionnaire">
-        <fieldset>
+        <fieldset required>
             <p class="question"> Il est interdit de conduire en France avec un taux d’alcool :</p>
             <label class="form-control">
                 <input type="checkbox" id="A" name="Q1A" value="A">
