--- a/Main.html
+++ b/Main.html
@@ -76,7 +76,8 @@
         <p class="sous-titre">Questionnaire :</p>
 
         <div id="questionnaire">
-        <fieldset required>
+        <fieldset >
+		<div id="reponse" required>		
             <p class="question"> Il est interdit de conduire en France avec un taux d’alcool :</p>
             <label class="form-control">
                 <input type="checkbox" id="A" name="Q1A" value="A">
@@ -94,6 +95,7 @@
                 <input type="checkbox" id="C" name="Q1D" value="D">
                 supérieur ou égal à 0,25 g/l d’air expiré  
             </label>
+		</div>
         </fieldset>
 
         <fieldset>
