--- a/Main.html
+++ b/Main.html
@@ -143,19 +143,19 @@
                 Avez-vous le droit de conduire ?   </p>
             <label class="form-control">
                 <input type="checkbox" id="A" name="Q4A" value="A">
-                Oui, si le pharmacien m’a donné son avis favorable
+                Oui, car le pharmacien m’a donné son avis favorable
             </label>
             <label class="form-control">
                 <input type="checkbox" id="B" name="Q4B" value="B">
-                Oui, si mon médecin m’a donné son avis favorable 
+                Oui, car mon médecin m’a donné son avis favorable 
             </label>
             <label class="form-control">
                 <input type="checkbox" id="C" name="Q4C" value="C">
-                Oui, si j’ai bien lu la notice 
+                Non, le pictogramme orange m'interdit la conduite
             </label>
             <label class="form-control">
                 <input type="checkbox" id="D" name="Q4D" value="D">
-                Oui, le pictogramme n’est pas de couleur rouge   
+                Non, ce n’est pas prudent de ma part de conduire   
             </label>
         </fieldset>
 
@@ -329,15 +329,16 @@
         </fieldset>
 
         <fieldset>
-            <p class="question"> Aucune réglementation n’existe quant à l’entretien de la voiture, en dehors du contrôle technique. 
+            <p class="question"> Ma voisine a besoin de conseils. Cela faitmaintenant 3 ans qu’elle a acheté sa voiture.
+		    Sachant qu’elle n’a parcouru que 25 000 km, doit-elle remplacer son liquide de frein ?
                  </p>
             <label class="form-control">
-                <input type="checkbox" id="L" name="Q13A" value="A">
-                Vrai
+                <input type="checkbox" id="L" name="Q14A" value="A">
+                Oui
             </label>                
             <label class="form-control">
-                <input type="checkbox" id="M" name="Q13B" value="B">
-                Faux
+                <input type="checkbox" id="M" name="Q14B" value="B">
+                Non
             </label>
         </fieldset>
 
