--- a/Main.html
+++ b/Main.html
@@ -274,6 +274,11 @@
                 Vous assurez la pré-signalisation du véhicule et vous attendez dans votre véhicule que le 
                 dégagement d’urgence soit réalisé    
             </label>
+	    <label class="form-control">
+                <input type="checkbox" id="N" name="Q10C" value="C">
+                Vous assurez la pré-signalisation et vous vous placez derrière la barrière de sécurité
+            </label>
+		
         </fieldset>
 
         <fieldset>
