--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <img src="Images\logo_msa.png" alt="Logo MSA" class="logo">
         <img src="Images\logoCCI_2_fond.png" alt="Logo CCI Maine-et-Loire" class="logo">
         <img src="Images\logo_medef.png" alt="Logo MEDEF" class="logo">
+	<img src="Images\logoSTCS.png" alt="Logo STCS" class="logo">
     </div>
 
 </body>
