--- a/Main.html
+++ b/Main.html
@@ -275,7 +275,7 @@
                 dégagement d’urgence soit réalisé    
             </label>
 	    <label class="form-control">
-                <input type="checkbox" id="N" name="Q10C" value="C">
+                <input type="checkbox" id="N" name="Q10D" value="D">
                 Vous assurez la pré-signalisation et vous vous placez derrière la barrière de sécurité
             </label>
 		
