--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     
     <p id="ligne"></p>
-    <a class="boutonsAccueil" href="Main.html" target="_blank">Questionnaire en ligne</a>
+    <a class="boutonsAccueil" href="https://forms.gle/p2oi58QE7QBJGzL76" target="_blank">Questionnaire en ligne</a>
     <a class="boutonsAccueil" href="Documents\chp 1 - intro - algo v5 - sept2019.pdf" target="_blank">Livret pédagogique</a>
     <a class="boutonsAccueil" href="Documents\chp 1 - intro - algo v5 - sept2019.pdf" target="_blank">Règlement du concours</a>
 
