--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     
     <p id="ligne"></p>
     <a class="boutonsAccueil" href="https://docs.google.com/forms/d/1srS6U_cQvs3246qbwiSPaOrSiestiN4pHwYGVix3iDw/edit?pli=1" target="_blank">Questionnaire en ligne</a>
-    <a class="boutonsAccueil" href="ASRE49_-_Livret_pedagogique.pdf" target="_blank">Livret pédagogique</a>
+    <a class="boutonsAccueil" href="Documents\ASRE49_-_Livret_pedagogique.pdf" target="_blank">Livret pédagogique</a>
     <a class="boutonsAccueil" href="Documents\chp 1 - intro - algo v5 - sept2019.pdf" target="_blank">Règlement du concours</a>
 
     <p>Merci à nos partenaires</p>
