--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     
     <p id="ligne"></p>
-    <a class="boutonsAccueil" href="https://docs.google.com/forms/d/e/1FAIpQLSdd-6Zu8E5nhdCR8JwAg-6i1OQ_NjvsK9XshDLBsQy21pwgdA/viewform?usp=pp_url" target="_blank">Questionnaire en ligne</a>
+    <a class="boutonsAccueil" href="https://forms.gle/4AZHnbzBsCafwGMq9" target="_blank">Questionnaire en ligne</a>
     <a class="boutonsAccueil" href="Documents\ASRE49_-_Livret_pedagogique.pdf" target="_blank">Livret pédagogique</a>
     <a class="boutonsAccueil" href="Documents\chp 1 - intro - algo v5 - sept2019.pdf" target="_blank">Règlement du concours</a>
 
