--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <p id="ligne"></p>
     <a class="boutonsAccueil" href="https://forms.gle/4AZHnbzBsCafwGMq9" target="_blank">Questionnaire en ligne</a>
     <a class="boutonsAccueil" href="Documents\ASRE49_-_Livret_pedagogique.pdf" target="_blank">Livret pédagogique</a>
-    <a class="boutonsAccueil" href="Documents\Reglement_jeu_concours_2023.pdf" target="_blank">Règlement du concours</a>
+    <a class="boutonsAccueil" href="Documents\Reglement_2023.pdf" target="_blank">Règlement du concours</a>
 
     <p>Merci à nos partenaires</p>
     <div id="logos">
